@@ -40,7 +40,7 @@ in the dynamic configuration file):
 
 	$GLOBALS['TCA']['tx_externalimporttut_departments'] = array(
 		'ctrl' => array(
-			'title'     => 'LLL:EXT:externalimport_tut/locallang_db.xml:tx_externalimporttut_departments',
+			'title'     => 'LLL:EXT:externalimport_tut/Resources/Private/Language/locallang_db.xlf:tx_externalimporttut_departments',
 			'label'     => 'name',
 			'tstamp'    => 'tstamp',
 			'crdate'    => 'crdate',
@@ -154,7 +154,7 @@ highlighted parts):
 			),
 			'code' => array(
 				'exclude' => 0,
-				'label' => 'LLL:EXT:externalimport_tut/locallang_db.xml:tx_externalimporttut_departments.code',
+				'label' => 'LLL:EXT:externalimport_tut/Resources/Private/Language/locallang_db.xlf:tx_externalimporttut_departments.code',
 				'config' => array(
 					'type' => 'input',
 					'size' => '10',
@@ -169,7 +169,7 @@ highlighted parts):
 			),
 			'name' => array(
 				'exclude' => 0,
-				'label' => 'LLL:EXT:externalimport_tut/locallang_db.xml:tx_externalimporttut_departments.name',
+				'label' => 'LLL:EXT:externalimport_tut/Resources/Private/Language/locallang_db.xlf:tx_externalimporttut_departments.name',
 				'config' => array(
 					'type' => 'input',
 					'size' => '30',
