@@ -1,23 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-	<meta type="array">
-		<type>database</type>
-		<description>Language labels for database tables/fields belonging to extension 'externalimport_tut'</description>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="tx_externalimporttut_departments">Departments</label>
-			<label index="tx_externalimporttut_departments.code">Code</label>
-			<label index="tx_externalimporttut_departments.name">Name</label>
-			<label index="tx_externalimporttut_teams">Teams</label>
-			<label index="tx_externalimporttut_teams.code">Code</label>
-			<label index="tx_externalimporttut_teams.name">Name</label>
-			<label index="tx_externalimporttut_teams.members">Members</label>
-			<label index="tx_externalimporttut_employees">Employees</label>
-			<label index="tx_externalimporttut_employees.code">Employee number</label>
-			<label index="tx_externalimporttut_employees.department">Department</label>
-			<label index="tx_externalimporttut_employees.holidays">Holidays balance</label>
-			<label index="tx_externalimporttut_ttnews.externalid">External ID</label>
-		</languageKey>
-	</data>
-</T3locallang>
